Created read and modify json file functions

--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,5 +1,5 @@
 environments {
-    dev {
-        url = "https://jsonplaceholder.typicode.com"
-    }
+        dev = "https://jsonplaceholder.typicode.com"
+        homol = "https://jsonplaceholder.typicode.com"
+        prod = "https://jsonplaceholder.typicode.com"
 }
